                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.1
  *) [TS-957] remove IE6 from the white list of ae_ua filter

  *) [TS-955] Fix the logging regression testing.

  *) [TS-962] typo of key name in logstats.cc. Author: Nick Berry.

  *) [TS-958] Fix a few valgrind memory check errors.

  *) [TS-567] A number of memory allocation clean up, and improvements. We
   now also support building with tcmalloc, jemalloc, and you can also turn
   off the freelist feature (for better debugging). [TBD TBD!]

  *) [TS-950] Make the HTTP header regressions work on 32-bit, inefficient,
   but it works.

  *) [TS-956] fix the building with zlib-1.2.5.1.

  *) [TS-953] consolidate string copy/concat for examples.

  *) [TS-924] More efficient sharing of origin connections.
    
   This also overloads the config for shared connections as follows:
    
       #  0 - Never
       #  1 - Share, with a single global connection pool
       #  2 - Share, with a connection pool per worker thread
       CONFIG proxy.config.http.share_server_sessions INT 1
    
   This option is now per-request (remap or plugin) overridable. This is
   heavily based on William Bardwells and Weijin's work.

  *) [TS-84] Unify all code to use PATH_NAME_MAX, and increase it to 4K.

  *) [TS-943] Implement support for HTTP accept filters.

  *) [TS-168] revert iObject and other changes, make collation client work
   in the clean way.

  *) [TS-941] invalid cast of off_t math to int. Author: B Wyatt.

  *) [TS-940] Add new configuration option, and solaris support, to set
  an initial congestion window size, proxy.config.http.server_tcp_init_cwnd.

  *) [TS-931] cluster latency too high, about 24ms. this change will cut
   the latency from 20+ms to about 10ms. Author: weijin

  *) [TS-896] When logging config changes, we should check if it is remote
   logging and clean up the collation client related data.
